# while-abstract-interpreter

./: .gitignore  Program.fs  README.md  WhileAbstractInterpreter.fsproj  WhileAbstractInterpreter.sln  build.ps1
AbstractState/: AbstractState.fs
Evaluator/: Eval.fs  EvalAexpr.fs  EvalBexpr.fs
Interval/: AbstractDomain.fs  Interval.fs  IntervalDomain.fs  Number.fs
Interval/IntervalDomain/: Interval.fs  IntervalDomain.fs  Number.fs
Interval/SignDomain/: Sign.fs  SignDomain.fs
Iteractive/: Iteractive.fs
Parser/: Ast.fs  Lexer.fs  Lexer.fsl  Parser.fs  Parser.fsi  Parser.fsy
while_abstract_interpreter/: a.out  dune-project  while_abstract_interpreter.opam
while_abstract_interpreter/lib/: abstract_domain.ml  abstract_state.ml  ast.ml  dune  eval.ml  interval.ml  lexer.ml  lexer.mll  number.ml  parser.ml  parser.mli  parser.mly
