(lang dune 3.6)

(name while_abstract_interpreter)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Alessandro Pirolo")

(maintainers "Alessandro Pirolo")

(license LICENSE)

(package
 (name while_abstract_interpreter)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
